k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuemap
  labels:
    app: vuemap
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vuemap
